--- a/src/_includes/base-layout.njk
+++ b/src/_includes/base-layout.njk
@@ -22,31 +22,7 @@
     </section>
   </aside> 
   <main> 
-    
-  <article>
-    <h1>
-      <a href="/posts/2020/20200512-my-third-post/">My Third Post</a>
-    </h1>
-    <p>this is getting old<p>
-    <time datetime="2020-05-12T00:00:00.000Z">May 11, 2020</time>
-  </article>
-
-  <article>
-    <h1>
-      <a href="/posts/2020/20200511-my-second-post/">My Second Post</a>
-    </h1>
-    <p>running like hell<p>
-    <time datetime="2020-05-11T00:00:00.000Z">May 10, 2020</time>
-  </article>
-
-  <article>
-    <h1>
-      <a href="/posts/2020/20200511-my-first-post/">My First Post</a>
-    </h1>
-    <p>my very ever post<p>
-    <time datetime="2020-05-11T00:00:00.000Z">May 10, 2020</time>
-  </article>
-
+    {{ content | safe }}
   </main> 
 </body> 
 </html>
