--- a/src/_includes/base-layout.njk
+++ b/src/_includes/base-layout.njk
@@ -12,7 +12,7 @@
 <body> 
   <aside>
     <section id="home">
-      <a href="/">Home<a>
+      <a a href="{{ '/' | url }}">Home<a>
     </section>
     <section id="tags">a lot of tags</section>
     <section id="me">
