--- a/src/_includes/base-layout.njk
+++ b/src/_includes/base-layout.njk
@@ -4,25 +4,37 @@
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
 
-  <link href="/css/index.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
+  <link href="https://unpkg.com/sanitize.css/typography.css" rel="stylesheet" />
+  <link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />
+
+  <!-- capture the CSS content as a Nunjucks variable -->
+  {% set css %}
+    {% include "styles.css" %}
+  {% endset %}
+  <!-- feed it through our cssmin filter to minify -->
+  <style>
+    {{ css | cssmin | safe }}
+  </style>
 
   <title>blog.melo.plus</title>
 </head> 
-<body> 
-  <aside>
-    <section id="home">
-      <a a href="{{ '/' | url }}">Home<a>
-    </section>
-    <section id="tags">a lot of tags</section>
-    <section id="me">
-      <h2>Hi! Me name is João Melo</h2>
-      <p>I write because...</p>
-      <p>You can find me in Twitter, GitHub and LinkedIn</p>
-    </section>
-  </aside> 
-  <main> 
-    {{ content | safe }}
-  </main> 
+<body>
+  <div class="container">
+    <header class="header">
+      <a href="{{ '/' | url }}">blog.melo.plus</a>
+    </header>
+    <main class="content"> 
+      {{ content | safe }}
+    </main>   
+    <aside class="sidebar">
+      <section class="tags">
+        <p>a lot of tags</p>
+      </section>
+      <section class="me">
+        <p>Hi! Me name is João Melo. I write because... You can find me in Twitter, GitHub and LinkedIn</p>
+      </section>
+    </aside> 
+  </div>
 </body> 
 </html>
