taglist and home and tag pages

--- a/src/index.njk
+++ b/src/index.njk
@@ -6,12 +6,5 @@ pagination:
   reverse: true
   alias: posts
 ---
-{% for post in posts %}
-  <article>
-    <h1>
-      <a href="{{ post.url | url }}">{{ post.data.title }}</a>
-    </h1>
-    <p>{{post.data.subtitle}}<p>
-    <time datetime="{{ post.date | dateIso }}">{{ post.date | dateReadable }}</time>
-  </article>
-{% endfor %}
+{% from 'post-list.njk' import postList %}
+{{ postList(posts) }}
