--- a/src/_layouts/base-layout.njk
+++ b/src/_layouts/base-layout.njk
@@ -10,7 +10,7 @@
     <title>blog.melo.plus</title>
   </head>
   <body class="bg-green-100 text-gray-700">
-    <div class="h-screen max-w-screen-sm mx-auto px-4 bg-white">
+    <div class="min-h-screen max-w-screen-sm mx-auto px-4 bg-white">
       <header class="text-right">{{ link('home', '/') }}</header>
       <main>
         {{ content | safe }}
@@ -21,9 +21,8 @@
             {{ tag(tagText) }}
           {% endfor %}
         </section>
-        <section class="mt-8">
-          <p class="text-justify text-sm">Hi! Me name is João Melo. I am an enthusiast of how leadership and technology combine to create amazing things together 🤓. I decided to blog about it as I learn what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }}or{{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }}</p>
-        </section>
+        <p class="mt-8 mx-8 p-4 text-justify font-mono border-dashed border-4 border-gray-700">Hi! Me name is João Melo. I am an enthusiast of how leadership and technology combine to create amazing things together 🤓. I decided to blog about it as I learn what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }} or {{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }}</p>
+        <br/>
       </footer>
     </div>
   </body>
