--- a/src/_layouts/base-layout.njk
+++ b/src/_layouts/base-layout.njk
@@ -1,5 +1,3 @@
-{% from 'link.njk' import link, tag %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,23 +5,138 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+
+    <style>
+        {# prism theme #}
+
+        /**
+        * okaidia theme for JavaScript, CSS and HTML
+        * Loosely based on Monokai textmate theme by http://www.monokai.nl/
+        * @author ocodia
+        */    
+
+        code[class*="language-"],
+        pre[class*="language-"] {
+          color: #f8f8f2;
+          background: none;
+          text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+          font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+          font-size: 1em;
+          text-align: left;
+          white-space: pre;
+          word-spacing: normal;
+          word-break: normal;
+          word-wrap: normal;
+          line-height: 1.5;
+
+          -moz-tab-size: 4;
+          -o-tab-size: 4;
+          tab-size: 4;
+
+          -webkit-hyphens: none;
+          -moz-hyphens: none;
+          -ms-hyphens: none;
+          hyphens: none;
+        }
+
+        /* Code blocks */
+        pre[class*="language-"] {
+          padding: 1em;
+          margin: .5em 0;
+          overflow: auto;
+          border-radius: 0.3em;
+        }
+
+        :not(pre) > code[class*="language-"],
+        pre[class*="language-"] {
+          background: #272822;
+        }
+
+        /* Inline code */
+        :not(pre) > code[class*="language-"] {
+          padding: .1em;
+          border-radius: .3em;
+          white-space: normal;
+        }
+
+        .token.comment,
+        .token.prolog,
+        .token.doctype,
+        .token.cdata {
+          color: slategray;
+        }
+
+        .token.punctuation {
+          color: #f8f8f2;
+        }
+
+        .token.namespace {
+          opacity: .7;
+        }
+
+        .token.property,
+        .token.tag,
+        .token.constant,
+        .token.symbol,
+        .token.deleted {
+          color: #f92672;
+        }
+
+        .token.boolean,
+        .token.number {
+          color: #ae81ff;
+        }
+
+        .token.selector,
+        .token.attr-name,
+        .token.string,
+        .token.char,
+        .token.builtin,
+        .token.inserted {
+          color: #a6e22e;
+        }
+
+        .token.operator,
+        .token.entity,
+        .token.url,
+        .language-css .token.string,
+        .style .token.string,
+        .token.variable {
+          color: #f8f8f2;
+        }
+
+        .token.atrule,
+        .token.attr-value,
+        .token.function,
+        .token.class-name {
+          color: #e6db74;
+        }
+
+        .token.keyword {
+          color: #66d9ef;
+        }
+
+        .token.regex,
+        .token.important {
+          color: #fd971f;
+        }
+
+        .token.important,
+        .token.bold {
+          font-weight: bold;
+        }
+        .token.italic {
+          font-style: italic;
+        }
+
+        .token.entity {
+          cursor: help;
+        }
+    </style>
+
     <title>blog.melo.plus</title>
   </head>
   <body class="bg-green-100 text-gray-700">
-    <div class="min-h-screen max-w-screen-sm mx-auto px-4 bg-white">
-      <header class="text-right">{{ link('home', '/') }}</header>
-      <main>
-        {{ content | safe }}
-      </main>
-      <footer>
-        <section class="mt-8 flex flex-wrap justify-center">
-          {% for tagText in collections.tagList %}
-            {{ tag(tagText) }}
-          {% endfor %}
-        </section>
-        <p class="mt-8 mx-8 p-4 text-justify font-mono border-dashed border-4 border-gray-700">Hi! Me name is João Melo. I am an enthusiast of how leadership and technology combine to create amazing things together 🤓. I decided to blog about it as I learn what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }} or {{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }}</p>
-        <br/>
-      </footer>
-    </div>
+    {{ content | safe }}
   </body>
 </html>
