--- a/src/_layouts/page-layout.njk
+++ b/src/_layouts/page-layout.njk
@@ -15,6 +15,7 @@ layout: base-layout.njk
       {% endfor %}
     </section>
     <p class="mt-8 mx-8 p-4 text-justify font-mono border-dashed border-4 border-gray-700">Hi! Me name is João Melo. I am an enthusiast of how leadership and technology combine to create amazing things together 🤓. I decided to blog about it as I learn what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }} or {{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }}</p>
+    <p class="text-center mt-8 text-xs">content here is copylefted under {{ link('CC-BY-SA-4.0','https://choosealicense.com/licenses/cc-by-sa-4.0/', '_blank') }}</p>
     <br/>
   </footer>
 </div>
