--- a/src/_layouts/page-layout.njk
+++ b/src/_layouts/page-layout.njk
@@ -1,21 +1,45 @@
----
-layout: base-layout.njk
----
-{% from 'link.njk' import link, tag %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128497960-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-<div class="min-h-screen max-w-screen-sm mx-auto px-4 bg-white">
-  <header class="text-right">{{ link('home', '/') }}</header>
-  <main>
-    {{ content | safe }}
-  </main>
-  <footer>
-    <section class="mt-8 flex flex-wrap justify-center">
-      {% for tagText in collections.tagList %}
-        {{ tag(tagText) }}
-      {% endfor %}
-    </section>
-    <p class="mt-8 mx-8 p-4 text-justify font-mono border-dashed border-4 border-gray-700">Hi! My name is João Melo. I am enthusiastic about how determination and technology combine to create amazing things 🤓. I decided to blog about it as I learn what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }} or {{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}</p>
-    <p class="text-center mt-8 text-xs">content here is copylefted under {{ link('CC-BY-SA-4.0','https://choosealicense.com/licenses/cc-by-sa-4.0/', '_blank') }}</p>
-    <br/>
-  </footer>
-</div>
+      gtag('config', 'UA-128497960-2');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
+    <link href="/styles/index.css" rel="stylesheet">
+
+    <title>blog.melo.plus</title>
+  </head>
+  <body>
+    {% from 'link.njk' import link, tag %}
+
+    <header>
+      <h1>{{ link('melo.plus', '/') }}</h1>
+    </header>
+
+    <div class="container">
+      <main>
+        {{ content | safe }}
+      </main>
+      <footer>
+        <div class="tags">
+          {% for tagText in collections.tagList %}
+            {{ tag(tagText) }}
+          {% endfor %}
+        </div>
+        <p class="about">Hi! My name is João Melo. I am enthusiastic about how determination and technology combine to create amazing things 🤓. I decided to blog about it as I learn what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }} or {{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}</p>          
+        <p class="license">content here is copylefted under {{ link('CC-BY-SA-4.0','https://choosealicense.com/licenses/cc-by-sa-4.0/', '_blank') }}</p>
+      </footer>
+    </div>
+  </body>
+</html>
