--- a/src/index.njk
+++ b/src/index.njk
@@ -9,6 +9,6 @@ pagination:
 {% from 'page-title.njk' import pageTitle %}
 {% from 'post-list.njk' import postList %}
 
-{{ pageTitle('featured posts') }}
+{{ pageTitle('Featured Posts') }}
 
 {{ postList(featured) }}
