--- a/src/_includes/page-title.njk
+++ b/src/_includes/page-title.njk
@@ -1,5 +1,3 @@
 {% macro pageTitle(title) %}
-  <h1 class="text-center text-3xl font-semibold capitalize">
-    {{- title -}}
-  </h1>
+  <h1 class="page-title">{{- title -}}</h1>
 {% endmacro %}
