--- a/src/styles/code.css
+++ b/src/styles/code.css
@@ -28,7 +28,7 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1em;
-  margin: .75em 1rem 0;
+  margin: 32px 8px;
   overflow: auto;
   border-radius: 0.3em;
 }
