--- a/src/_layouts/page-layout.njk
+++ b/src/_layouts/page-layout.njk
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128497960-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    {% if env.mode == "prod" %}
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128497960-2"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-      gtag('config', 'UA-128497960-2');
-    </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+        gtag('config', 'UA-128497960-2');
+      </script>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    {% endif %}  
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -24,7 +26,12 @@
     {% from 'link.njk' import link, tag %}
 
     <header>
-      <h1>{{ link('melo.plus', '/') }}</h1>
+      <h1>
+        {{ link('melo.plus', '/') }} 
+        {% if env.mode == "dev" %}
+          <span style="font-size: small;">dev</span>
+        {% endif %}  
+      </h1>
     </header>
 
     <div class="container">
