prrof of concept

--- a/src/404.njk
+++ b/src/404.njk
@@ -8,7 +8,7 @@ permalink: /404.html
 <div>
   {{ pageTitle(title) }}
   <img 
-    src="/404.png" 
+    src="/media/_404.png" 
     alt="Page Not Found"
     class="post-image"
   >
