--- a/src/_layouts/page-layout.njk
+++ b/src/_layouts/page-layout.njk
@@ -29,7 +29,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <link rel="icon" type="image/png" href="/media/favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
     <link href="/styles/index.css" rel="stylesheet">
 
     <title>blog.melo.plus</title>
