--- a/src/_layouts/page-layout.njk
+++ b/src/_layouts/page-layout.njk
@@ -48,7 +48,7 @@
             {{ tag(tagText) }}
           {% endfor %}
         </div>
-        <p class="about">Hi! My name is João Melo 🤓. I am Enthusiastic about how collaboration and learning combine in the digital world to create amazing things. I decided to blog about it as I learn what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }} or {{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}</p>          
+        <p class="about">Hi! My name is João Melo 🤓. I am Enthusiastic about how collaboration and learning combine in the digital world to create amazing things. I decided to blog about it as I figure out what I can. You can get updates from {{ link('Twitter','https://twitter.com/joaomeloplus', '_blank') }}, and also find me on {{ link('GitHub','https://github.com/joaomelo', '_blank') }} or {{ link('LinkedIn','https://www.linkedin.com/in/joaomelo81/?locale=en_US', '_blank') }}</p>          
         <p class="license">content here is copylefted under {{ link('CC-BY-SA-4.0','https://choosealicense.com/licenses/cc-by-sa-4.0/', '_blank') }}</p>
       </footer>
     </div>
